--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -43,8 +43,8 @@ How many seconds?: 0 hours, 0 minutes, 13 seconds.
 [RUNNING] Exercise4
 -->
 What do you think my number is?: Your number was: 13
-	My number was: 17
-	You were off by: 4
+	My number was: 92
+	You were off by: 79
 	
 <--
 	[OUTPUT OK]
@@ -129,13 +129,25 @@ Ch6Ex4.java:56: error: cannot find symbol
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
+<b>          [SCORE] 0.25</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW6: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+	[ERROR] No chapter work for:chapter11
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
