--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -148,7 +148,7 @@ Time:
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -159,5 +159,17 @@ Time:
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
 <b>          [SCORE] 0.00</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW6: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+	[ERROR] No chapter work for:chapter11
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
