--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -108,13 +108,25 @@ Seconds remaining: 39870
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW4: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
+<b>          [SCORE] 0.25</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW6: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+	[ERROR] No chapter work for:chapter11
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
